secondary-cidr/terraform-code/internet_gateway.tf
resource "aws_internet_gateway" "gongdel--igw-0018ed7cc2495d774" {
  vpc_id = aws_vpc.gongdel--vpc.id
}
